# computer_service_system

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  MONITORING.md  README.md  README_DOCKER.md  TODO.md  TODO_CMakeFix.md  TODO_DEPLOYMENT.md  TODO_Docker.md  TODO_Docker_Deploy.md  TODO_Fix_libpqxx_Docker.md  TODO_libpqxx_fix.md  docker-compose.yml  docker-push.sh  generate_metrics.sh  prometheus.yml  promtail-local-config.yaml  promtail.service  setup_monitoring.sh  test_metrics.sh
.github/workflows/: ci.yaml  docker-publish.yml
docker/: config.json  init.sql  prometheus.yml  promtail-local-config.yaml  wait-for-db.sh
docker/grafana/provisioning/datasources/: datasources.yml
libpqxx-7.7.5/: CMakeLists.txt  compile_flags
libpqxx-7.7.5/build-test/include/pqxx/: config-internal-libpq.h  config-public-compiler.h
libpqxx-7.7.5/cmake/: config.cmake
libpqxx-7.7.5/include/pqxx/: binarystring.hxx  result.hxx
libpqxx-7.7.5/include/pqxx/internal/: conversions.hxx
libpqxx-7.7.5/src/: result.cxx
reports/: алвс10.docx  алвс11.docx  алвс13.docx  алвс9.docx
src/: database.cpp  database.h  logger.h  main.cpp  metrics.h  webserver.cpp  webserver.h
tests/: CMakeLists.txt  config_test.json  test_simple.cpp
www/: index.html
